# applink-rs

./: .gitignore  Cargo.toml
applink-client/: Cargo.toml
applink-client/examples/: macro.rs  read_uid.rs
applink-client/src/: common.rs
applink-client/src/http/: mod.rs
applink-client/src/mqtt/: mod.rs
applink-codec/: Cargo.toml
applink-codec/src/: lib.rs  permission.rs  report.rs  uid.rs
applink-codec/src/gateway_control/: request.rs  response.rs
applink-codec/src/remote_control/: mod.rs  request.rs  response.rs
applink-codec/src/wizzi_macro/: response.rs
applink-xml/: Cargo.toml
applink-xml/examples/: assert_monitor.rs
applink-xml/src/: d7b.rs  lib.rs
applink-xml/src/apps/: common.rs  mod.rs
applink-xml/src/apps/uguard/: common.rs  mod.rs  tag.rs
applink-xml/src/modem/: v6_3.rs
applink_client/: Cargo.toml  LICENSE
applink_client/examples/: amqp_listen.rs  listen.rs  macro.rs  macro_realtime.rs  read_uid.rs
applink_client/examples/macro/: uguard_peripheral_configure.json
applink_client/src/: common.rs  lib.rs
applink_client/src/amqp/: mod.rs
applink_client/src/http/: mod.rs
applink_client/src/mqtt/: mod.rs
applink_codec/: Cargo.toml
applink_codec/src/: lib.rs  report.rs  uid.rs
applink_codec/src/remote_control/: request.rs  response.rs
applink_codec/src/wizzi_macro/: request.rs  response.rs
applink_xml/: Cargo.toml
applink_xml/examples/: assert_monitor.rs
applink_xml/src/: lib.rs
applink_xml/src/apps/: common.rs
applink_xml/src/apps/uguard/: common.rs  tag.rs
applink_xml/src/modem/: mod.rs  v6_3.rs
examples/: listen.rs  macro.rs  read_uid.rs
src/: common.rs  lib.rs
src/codec/: mod.rs  report.rs
src/codec/gateway_control/: request.rs  response.rs
src/codec/remote_control/: request.rs  response.rs
src/codec/wizzi_macro/: request.rs  response.rs
src/http/: mod.rs
src/mqtt/: mod.rs
