[package]
name = "applink_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
hex = "0.4"
rumqttc = "0.20"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["io-util", "fs"] }
tokio-util = "0.7"
log = "0.4"
rand = "0.8"
reqwest = { version = "0.11.14", features = ["json"] }
lazy_static = "1.4"
applink_codec = { path = "../applink_codec" }
wizzi_common = { git = "ssh://github.com/wizzilab/wizzi_common-rs.git", branch = "master" }

[[example]]
name = "read_uid"

[dev_dependencies]
clap = { version = "4", features = ["derive"] }

