[package]
name = "applink_xml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
wizzi-common = { git = "ssh://git@github.com/wizzilab/wizzi-common-rs.git", branch = "master" }
num_enum = "0.5"
